# galernaDaisy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Galerna.cpp  Galerna.hpp  Makefile  README.md  TestGalerna.cpp
BasicTestApp/: CMakeLists.txt
BasicTestApp/src/: TestGalerna.cpp
DattoroReverbApp/: CMakeLists.txt
DattoroReverbApp/src/: DattoroReverb.h  DattoroReverbApp.cpp
Dsp/: CMakeLists.txt
Dsp/include/: AllPassFilter.h  BiquadFilter.h  CombFilter.h  Delay.hpp  Lfo.h  OnePoleLpf.h
Dsp/src/: BiquadFilter.cpp  Lfo.cpp
GalernaDaisy/: CMakeLists.txt
GalernaDaisy/include/: Galerna.hpp
GalernaDaisy/src/: Galerna.cpp
SchroederReverbApp/: CMakeLists.txt
SchroederReverbApp/src/: SchroederReverb.h  SchroederReverbApp.cpp
TestSDApp/: CMakeLists.txt
TestSDApp/src/: GalernaFileReader.h  main.cpp
ThxSeedApp/: CMakeLists.txt
ThxSeedApp/src/: ThxSeed.cpp  ThxVoice.cpp  ThxVoice.h  WavetableOsc.h
TrillDaisy/: CMakeLists.txt
TrillDaisy/include/: Trill.h
TrillDaisy/src/: Trill.cpp
Utilities/: CMakeLists.txt
Utilities/include/: CircularBuffer.h  Conversions.h  Interpolation.h
cmake/: arm-cortex-gnu-toolchain.cmake  daisy-setup.cmake
